changed site's title and fixed logo issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ nav {
 
 nav svg {
   height: 50px;
-  width: fit-content;
+  width: fit-content !important;
 }
 
 @media screen and (max-width: 500px) {
